<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PeopleTag</string>
    <string name="registerPosition">Register my position</string>


    <!-- Menu Strings -->
    <string name="ui_menu_search">Reload</string>
    <string name="ui_menu_send">send</string>
    <string name="ui_menu_add">Add Pairing</string>
    <string name="ui_menu_quit">Quit</string>
    <string name="ui_menu_setup">Setup</string>
    <string name="search_people_fragment">Search People Fragment</string>

    <!-- setup Strings -->
    <string name="ui_setup_noname">ERROR: Please enter your name</string>
    <string name="ui_setup_error">ERROR while registering user!</string>
	
	    <string name="scanning">Scanning...</string>
    
    <string name="menu_standard">Standard</string>
    <string name="menu_metric">Metric</string>
</resources>
