<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/menuitem_search"
            android:icon="@android:drawable/ic_menu_search"
            android:showAsAction="ifRoom"
            android:title="@string/ui_menu_search">
    </item>
    <item
            android:id="@+id/menuitem_send"
            android:icon="@android:drawable/ic_menu_send"
            android:showAsAction="ifRoom"
            android:title="@string/ui_menu_send">
    </item>
    <item
            android:id="@+id/menuitem_add"
            android:icon="@android:drawable/ic_menu_add"
            android:showAsAction="ifRoom"
            android:title="@string/ui_menu_add">
    </item>
    <item
            android:id="@+id/menuitem_setup"
            android:icon="@android:drawable/ic_menu_upload"
            android:showAsAction="ifRoom"
            android:title="@string/ui_menu_setup">
    </item>
    <item
            android:id="@+id/menuitem_quit"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:showAsAction="ifRoom"
            android:title="@string/ui_menu_quit">
    </item>

</menu>